# CSP_Solver

./: .gitignore  README.md  algorithms.h  constraint.h  problem.h
src/: CMakeLists.txt  algorithms.cpp  main.cpp  solver.cpp  solver.h
src/CSP_Solver/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  problem.cpp  solver.cpp  solver.h
src/examples/: CMakelIsts.txt  mapColoringProblem.cpp  nQueenProblem.cpp  sudokuProblem.cpp
